fix(android): support native builds on JDK 24